feat:(ci)已实现 FreeSWITCH 动态 Dialplan 和 ESL 外呼自动录音，并在挂断后异步调用上传脚本。 已实现录音内部上传接口，通过现有 OSS 配置上传 MinIO，并关联到 `cc_call_session`。 已完成声音文件分类存储基础能力，通话录音强制使用独立 `call-recording` OSS 配置键；振铃音、等待音乐、IVR 提示音和用户音乐已预留独立配置键。 已实现通话记录显式保存 `customerId`、`ticketId`，客户和工单详情优先按显式关联查询。 通话记录详情和客户/工单详情已支持在线播放录音。 录音回放统一返回 MinIO 预签名直链，默认有效期 2 小时；前端 `<audio>` 标签可直接播放，私有桶不会暴露永久访问路径。 通话详情录音页已接入 WaveSurfer 波形播放器，支持真实音频波形、播放进度高亮和拖拽跳转。 已将私有 OSS 文件预签名 URL 抽取为通用 `OssService.selectUrlById(ossId, ttl)` 能力，后续业务文件统一复用，不再自行操作 `OssFactory`。 声音文件存储分类和后续媒体管理约束见 `AUDIO_STORAGE_DESIGN.md`。 声音媒体管理第一版代码已完成：统一 `cc_media_asset`、分类上传、列表、WaveSurfer 试听、启停、删除保护，以及 AI/TTS/转写字段预留。 通话录音上传已同步创建 `CALL_RECORDING` 媒体资产，并在业务通话中保存稳定 `recording_media_id`。 已实现声音媒体不可变版本、通用 FreeSWITCH 节点组、按组发布、节点同步任务和 Sidecar Agent 拉取同步第一版。 节点 Agent 使用独立 Token，支持心跳、任务租约、源文件下载、FFmpeg 标准化、结果回报、自动退避重试和手工重试。